# lorem

./: Cargo.toml  LICENCE  README.md  gen.txt  recr.txt
src/: cli.rs  main.rs  title.rs
