[package]
name = "lorem"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "A simple terminal app for generating lorem ipsum text."
homepage = "https://github.com/ThaddeusTreloar/lorem"
repository = "https://github.com/ThaddeusTreloar/lorem"
readme = "README.md"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["derive"] }
lipsum = "0.9.0"
rand = "0.8.5"
